' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml Kunde

skinparam classAttributeIconSize 0
' skinparam monochrome true

package java {
    package util {
        interface List<T>
        class URL
    }

    package time {
        class LocalDate

        LocalDate .right[hidden].> List
    }
}

package org.springframework.hateoas {
    class RepresentationModel<T>

    URL .right[hidden].> RepresentationModel
}

package com.acme.filiale {
    package entity {
        class Kunde
        class Umsatz
        class Adresse
        enum GeschlechtType
        enum FamilienstandType
        enum InteresseType
    }

    package rest #DDDDDD {
        class KundeModel << entity >> {
            name : String
            email : String
            kategorie: Int
            hasNewsletter: Boolean
            geburtsdatum: LocalDate
            homepage: URL
            geschlecht: GeschlechtType
            familienstand: FamilienstandType
            interessen: List<InteresseType>
        }

        KundeModel *--> "0..1" Umsatz : umsatz
        KundeModel *--> "1" Adresse : adresse
        KundeModel ..> GeschlechtType
        KundeModel ..> FamilienstandType
        KundeModel ..> InteresseType
        KundeModel -up-|> RepresentationModel

        KundeModel ..> Kunde

        KundeModel .up.> URL
        KundeModel .up.> LocalDate
        KundeModel .up.> List
    }
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
